2017-01-24  Edward Jones  <ed.jones@embecosm.com>

	* script/generate-builds.py: Fix typo causing -fmageec-gfortran to
	not be passed to the builder.

2017-01-24  Edward Jones  <ed.jones@embecosm.com>

	* include/mageec/Util.h (getFullPath getBaseName): Added functions.
	* lib/Util.cpp: Likewise.

2017-01-20  Edward Jones  <ed.jones@embecosm.com>

	* script/feature-extract.py: Add --fort argument, rename --cflags
	argument to just --flags.
	* script/generate-builds.py: Likewise.
	* script/mageec.py (build): Add support for building using a
	custom build script. Add support for --fort argument and
	rename cflags to flags.
	(preserve_cwd): Add function to be used in 'with' clauses to
	preserved the current working directory across a block.
	* script/measure-code-size.py: Refactor to use preserved_cwd.

2017-01-17  Edward Jones  <ed.jones@embecosm.com>

	* script/feature-extract.py: Add ability to specify number of jobs
	for a build.
	* script/generate-builds.py: Likewise.
	* script/mageec.py: Likewise.

2017-01-17  Edward Jones  <ed.jones@embecosm.com>

	* lib/Database.cpp: Fix ml_id field in SQL to be text instead of
	a blob.

2017-01-16  Edward Jones  <ed.jones@embecosm.com>

	* script/generate-builds.py: Do not toggle passed which aren't
	supported in the earliest mageec-supported version (4.5)

2017-01-16  Edward Jones  <ed.jones@embecosm.com>

	* script/feature-extract.py: Update formatting.
	* script/generate-builds.py: Likewise.
	* script/mageec.py: Likewise.
	* script/measure-code-size.py: Likewise.

2017-01-16  Edward Jones  <ed.jones@embecosm.com>

	* lib/Database.cpp (Database::addResults): If a result is
	added for a compilation id and metric already in the database,
	replace the old value.

2017-01-16  Edward Jones  <ed.jones@embecosm.com>

	* include/mageec/Database.h (Database::InputResult): Remove structure.
	(Database::addResults): Change results argument to be a map from
	a CompilerID + metric name to a value.