@@ -1,5 +1,11 @@
 2017-01-24  Edward Jones  <ed.jones@embecosm.com>
 
+	* script/feature-extract.py: Add --cxx argument.
+	* script/generate-builds.py: Likewise.
+	* script/mageec.py: Likewise.
+
+2017-01-24  Edward Jones  <ed.jones@embecosm.com>
+
 	* script/generate-builds.py: Fix typo causing -fmageec-gfortran to
 	not be passed to the builder.
 
